
---
*** The tab bar is frame-local when 'tab-bar-show' is a number.
Show/hide the tab bar independently for each frame, according to the
value of 'tab-bar-show'.

---
*** New command 'toggle-frame-tab-bar'.
It can be used to enable/disable the tab bar individually on each frame
independently from the value of 'tab-bar-mode' and 'tab-bar-show'.

---
*** 'Mod-9' bound to 'tab-last' now switches to the last tab.
It also supports a negative argument.

---
*** New command 'tab-duplicate' bound to 'C-x t n'.

---
*** 'C-x t N' creates a new tab at the specified absolute position.
It also supports a negative argument.

---
*** 'C-x t M' moves the current tab to the specified absolute position.
It also supports a negative argument.

---
*** New user option 'tab-bar-tab-name-format-function'.

---
*** New user option 'tab-line-tab-name-format-function'.

---
*** The tabs in the tab line can now be scrolled using horizontal scroll.
If your mouse or trackpad supports it, you can now scroll tabs when
the mouse pointer is in the tab line by scrolling left or right.

---
*** New tab-line faces and options.
The face 'tab-line-tab-special' is used for tabs whose buffers are
special, i.e. not file-backed.  The face
'tab-line-tab-inactive-alternate' is used to display inactive tabs
with an alternating background color, making them easier to
distinguish between, especially if the face 'tab-line-tab' is
configured to not display with a box; this alternate face is only
applied when the option 'tab-line-tab-face-functions' is
so-configured.  That option may also be used to customize tab-line
faces in other ways.

** Occur mode

*** New bindings in occur-mode, 'next-error-no-select' bound to 'n' and
'previous-error-no-select' bound to 'p'.

*** The new command 'recenter-current-error', bound to 'l' in Occur or
compilation buffers, recenters the current displayed occurrence/error.

** EIEIO

+++
*** The macro 'oref-default' can now be used with 'setf'.