@@ -490,6 +490,13 @@ It can be used to enable/disable the tab bar individually on each frame
 independently from the value of 'tab-bar-mode' and 'tab-bar-show'.
 
 ---
+*** New variable 'tab-bar-format' that defines a list of tab bar items.
+When it contains `tab-bar-format-global' (possibly appended after
+`tab-bar-format-align-right'), then after enabling `display-time-mode'
+it displays time aligned to the right on the tab bar instead of the
+mode line of every window.
+
+---
 *** 'Mod-9' bound to 'tab-last' now switches to the last tab.
 It also supports a negative argument.
 
